# dikt

./: .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  research.md  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  release.yml
docs/: PRD.md  current-state.md  index.html  ui-redesign-plan.md
mockups/modes/: code.html
mockups/vocabulary-v2/: design1-emerald-dark.html  design2-card-based.html
scripts/: test-transcription-api.ts
src/: App.tsx  SettingsApp.tsx  constants.ts  defaultModes.ts  main.tsx  style.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  clipboard.rs  commands.rs  main.rs  settings.rs  state.rs  transcribe.rs  transcription_history.rs
src-tauri/src/click_through/: macos.rs
src-tauri/src/domain/: impls.rs  manager.rs  ports.rs  tests.rs
src/components/: Tooltip.tsx  index.ts
src/components/Pill/: GearButton.tsx  IdleDots.tsx  LoadingDots.tsx  Pill.tsx  SineWaves.tsx  WaveBars.tsx  index.ts
src/components/Settings/: DictionaryPage.tsx  HistoryPage.tsx  ModesPage.tsx  RightPanel.tsx  SettingsPage.tsx  Sidebar.tsx  index.ts
src/components/SettingsPanel/: HistoryTab.tsx  SettingsPanel.tsx  SettingsTab.tsx  VocabularyEditor.tsx  VocabularyEntry.tsx  VocabularyTab.tsx  index.ts
src/lib/: notify.ts
