[package]
name = "dikt"
version = "1.1.5"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

cpal = "0.15"
hound = "3.5"
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"] }
arboard = "3"
enigo = "0.2"
keyring = "3"
once_cell = "1"
base64 = "0.22"

[features]
custom-protocol = ["tauri/custom-protocol"]
